# eggroll

./: .gitattributes  .gitignore  .gitmodules  .sat.toml  BUILD_INFO  README.md  RELEASE.md  VERSION  build_py_proto.sh  eggroll.sh  pom.xml  requirements-2.x.txt  requirements.txt
.github/ISSUE_TEMPLATE/: --issue-report.md
api/: __init__.py  clustercomm.py  core.py  eggroll.py  storage.py
api/cluster/: clustercomm.py  eggroll.py  simple_roll.py
api/proto/: computing_basic_pb2.py  node_manager_pb2.py  node_manager_pb2_grpc.py  processor_pb2.py  processor_pb2_grpc.py
api/standalone/: clustercomm.py  eggroll.py
api/test/: dummy_test.py  lr_test.py  recv_test.py  send_test.py  (+1 more)
cluster-deploy/: Eggroll Deployment Guide.md
computing/: processor-old.py  processor.py  storage_adapters.py
conf/: 2.5.x_To_3.0.0_DDL.sql  applicationContext-proxy.xml  create-eggroll-meta-tables.sql  eggroll.properties  log4j2.properties  log4j2.xml  route_table.json  standalone-manager-log4j2.properties  whitelist.json
core/: pom.xml
cpp/roll_frame/: CMakeLists.txt
cpp/roll_frame/include/eggroll/roll_frame/pytorch/: commons.h  roll_frame_torch.h
cpp/roll_frame/src/eggroll/roll_frame/pytorch/: roll_frame_torch.cc
data/: 2.5.x_To_3.0.0_DDL.sql  create-eggroll-meta-tables.sql
deploy/: Eggroll Deployment Guide.md  Eggroll部署文档说明.md  aomp-test.sh  auto-packaging.bat  auto-packaging.sh  conf.sh  deploy.sh  init.sh  init_env.sh  upgrade_helper.py
doc/: Eggroll部署文档说明.md  api.md  eggroll_dashboard使用文档.md  upgrade_helper_guide.md
driver/: pom.xml
framework/: pom.xml
jvm/: pom.xml
networking/: pom.xml
proto/: basic-meta.proto  computing-basic.proto  generate_proto_buffer.sh  grpc-test.proto  node-manager.proto  pb_gen.sh  processor.proto
python/: setup.py
roll_objects/: pom.xml
storage/: pom.xml
upgrade_tool/: upgrade_helper.py
(+3062 files in other folders)
